<resources>
    <string name="app_name">Morser</string>
    <string name="title_morsekey">Morse Key</string>
    <string name="title_translator">Translator</string>
    <string name="title_shortcuts">Shortcuts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="translator_button_out_send_text">Send</string>
    <string name="translator_button_out_pause_text">Pause</string>
    <string name="translator_button_translate_text">Translate</string>
    <string name="translator_button_switch_text">Switch</string>
    <string name="translator_switch_audio_text">Audio</string>
    <string name="translator_switch_haptic_text">Vibration</string>
    <string name="translator_switch_flash_text">Light</string>
    <string name="translator_button_delet_text">Delete</string>
    <string name="translator_textfield_text_hint_mode_1">Insert Text here</string>
    <string name="translator_textfield_morse_hint_mode_1">MorseCode</string>
    <string name="translator_textfield_text_hint_mode_2">Translated Text</string>
    <string name="translator_textfield_morse_hint_mode_2">Press Buttons to insert Morsecode</string>

    <string name="shortcuts_button_sos">SOS</string>
    <string name="shortcuts_button_help">H\nE\nL\nP</string>
    <string name="shortcuts_button_hello">HELLO</string>
    <string name="shortcuts_button_bye">BYE</string>
    <string name="shortcuts_button_yes">YES</string>
    <string name="shortcuts_button_no">NO</string>
    <string name="shortcuts_button_maybe">Maybe</string>

    <string name="buttons_button_key">Morse Here</string>
    <string name="buttons_button_reset">Reset</string>
    <string name="buttons_button_pause">Pause</string>
    <string name="buttons_button_clear">Clear</string>
</resources>
