<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="at.fhooe.mc.android.morseapp.ShortcutFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <Switch
                android:id="@+id/shortcut_switch_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="32dp"
                android:text="@string/translator_switch_audio_text" />

            <Switch
                android:id="@+id/shortcut_switch_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="32dp"
                android:text="@string/translator_switch_haptic_text" />

            <Switch
                android:id="@+id/shortcut_switch_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="0dp"
                android:text="@string/translator_switch_flash_text" />
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="1080px"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/shortcut_button_help"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorAccent"
                    android:rotation="0"
                    android:text="@string/shortcuts_button_help"
                    android:textSize="45sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/shortcut_button_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/shortcuts_button_yes"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/shortcut_button_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/shortcuts_button_no"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/shortcut_button_maybe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/shortcuts_button_maybe"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shortcut_button_bye"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/shortcuts_button_bye"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shortcut_button_hello"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/shortcuts_button_hello"
                    android:textSize="70sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shortcut_button_sos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/shortcuts_button_sos"
                    android:textSize="80sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
