<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="8dp"
    tools:context="at.fhooe.mc.android.morseapp.TransFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/translator_switch_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:text="@string/translator_switch_audio_text"
                android:textColorLink="@color/colorPrimary" />

            <Switch
                android:id="@+id/translator_switch_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:text="@string/translator_switch_haptic_text"
                android:textColorLink="@color/colorPrimary" />

            <Switch
                android:id="@+id/translator_switch_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translator_switch_flash_text"
                android:textColorLink="@color/colorPrimary" />
        </LinearLayout>

        <View
            android:layout_width="1080px"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/translator_textfield_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.08"
            android:ems="10"
            android:hint="@string/translator_textfield_text_hint_mode_1"
            android:inputType="textMultiLine|textPersonName"
            android:textSize="30sp" />

        <View
            android:id="@+id/view"
            android:layout_width="1080px"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/translator_button_translate"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/translator_button_translate_text"
                android:textSize="10sp" />

            <Button
                android:id="@+id/translator_button_send"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/translator_button_out_send_text" />

            <Button
                android:id="@+id/translator_button_switch"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/translator_button_switch_text" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="1080px"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/translator_textfield_morse"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/translator_textfield_morse_hint_mode_1"
            android:textSize="30sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="1080px"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/translator_button_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="."
                android:visibility="invisible" />

            <Button
                android:id="@+id/translator_button_dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="-"
                android:visibility="invisible" />

            <Button
                android:id="@+id/translator_button_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="-----"
                android:visibility="invisible" />

            <Button
                android:id="@+id/translator_button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/translator_button_delet_text"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
