<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="at.fhooe.mc.android.morseapp.ButtonFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/buttons_text_morsecode"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/buttons_text_text"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttons_button_clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttons_button_clear"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttons_button_pause"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttons_button_pause"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttons_button_reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttons_button_reset"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttons_button_morse_here"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/buttons_button_key"
                android:textSize="80sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
